@@ -1,3 +1,9 @@
+2001-06-01  Martin Baulig  <baulig@suse.de>
+
+	* gnome-selector-client.c
+	(gnome_selector_client_check_uri): New function.
+	(gnome_selector_client_scan_directory): New function.
+
 2001-05-31  Martin Baulig  <baulig@suse.de>
 
 	* gnome-selector-client.c (WANT_PREVIEW_WIDGET): New property.
